--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "firebase-tools": "^7.3.2",
     "material-icons": "^0.3.1",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
