--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,20 +1,19 @@
 {
   "name": "tadanoSpeech2Text",
   "short_name": "tadanoSpeech2Text",
-  "icons": [
-    {
-      "src": "./img/icons/android-chrome-192x192.png",
+  "icons": [{
+      "src": "img/icons/manifest-icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "./img/icons/android-chrome-512x512.png",
+      "src": "img/icons/manifest-icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
   "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#4DBA87"
+  "background_color": "#ffffff",
+  "theme_color": "#ffffff"
 }
